src/test/ui/union/union-fields-1.stderr
error: field is never read: `c`
  --> $DIR/union-fields-1.rs:6:5
   |
LL |     c: u8,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_c`
   |
   = note: The leading underscore signals to the reader that while the field may not be read
           by any Rust code, it still serves some other purpose that isn't detected by rustc.
           (e.g. some values are used for their effect when dropped or used in FFI code
           exclusively through raw pointers)
note: the lint level is defined here
  --> $DIR/union-fields-1.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: field is never read: `a`
  --> $DIR/union-fields-1.rs:9:5
   |
LL |     a: u8,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_a`
   |
   = note: The leading underscore signals to the reader that while the field may not be read
           by any Rust code, it still serves some other purpose that isn't detected by rustc.
           (e.g. some values are used for their effect when dropped or used in FFI code
           exclusively through raw pointers)

error: field is never read: `a`
  --> $DIR/union-fields-1.rs:13:20
   |
LL | union NoDropLike { a: u8 }
   |                    ^^^^^ help: if this is intentional, prefix it with an underscore: `_a`
   |
   = note: The leading underscore signals to the reader that while the field may not be read
           by any Rust code, it still serves some other purpose that isn't detected by rustc.
           (e.g. some values are used for their effect when dropped or used in FFI code
           exclusively through raw pointers)

error: field is never read: `c`
  --> $DIR/union-fields-1.rs:18:5
   |
LL |     c: u8,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_c`
   |
   = note: The leading underscore signals to the reader that while the field may not be read
           by any Rust code, it still serves some other purpose that isn't detected by rustc.
           (e.g. some values are used for their effect when dropped or used in FFI code
           exclusively through raw pointers)

error: aborting due to 4 previous errors

